# virtman

./: Cargo.toml
src/: lib.rs  main.rs  virt_connection.rs  virt_lookups.rs  virtual_machine.rs
ui/: package.json  pnpm-lock.yaml
ui/src/: App.vue  router.js
ui/src/components/icons/: PauseIcon.vue  PlayIcon.vue  StopIcon.vue
ui/src/views/: NetworkList.vue  StorageList.vue  VmList.vue
