[package]
name = "virtman"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.16"
mime_guess = "2.0.4"
quick-xml = { version = "0.28.2", features = ["async-tokio", "serialize"] }
rust-embed = "6.6.1"
serde = { version = "1.0.160", features = ["derive"] }
serde-transcode = "1.1.1"
serde_json = "1.0.96"
tokio = { version = "1.27", features = ["full"] }
virt = "0.2.12"
